# PoseidixStudio

./: .gitignore  CMakeLists.txt  CleanBuildFiles.bat  README.md  fbuild.bff  fbuild.windows.fdb
BuildScripts/: ClPackage_Library.bff  CommonEnd.bff  CommonPrerequisites.bff  CommonSetup.bff  InitializePaths.bff  MakeExecutable.bff  OutputSettings.bff  PlatformSetup.bff
BuildScripts/UWP/: MSVC_Collect.bff  MSVC_Compile_BaseFlags.bff  MSVC_Flags.bff
BuildScripts/UWP/Win32/: WindowsExtensions.bff  WindowsPrerequisites.bff
BuildScripts/Unix/: LLVM_Collect.bff  LLVM_Compile_BaseFlags.bff
BuildScripts/Unix/Apple/: MacExtensions.bff  MacPrerequisites.bff
BuildScripts/Unix/Linux/: LinuxExtensions.bff  LinuxPrerequisites.bff
Code/CommonLib/: CleanBuildFiles.bat  fbuild.bff
Code/CommonLib/Include/Poseidix/Common/: Nutty.h
Code/CommonLib/Source/: nutty.cxx
Code/CommonLib/Source/math/: fpreg.cxx
Code/CommonLib/inc/commonlib/HAL/: platform.h
Code/CommonLib/inc/commonlib/math/: flt.h  flt16.h  fpreg.h  glm_fwd.h  int.h  vec2.hxx  vec4.h
Code/CommonLib/inc/commonlib/math/detail/: config.hxx  matbase.hxx  vecbase.hxx
Code/CommonLib/include/commonlib/math/: fpreg.h
Code/CommonLib/src/math/: fpreg.cxx
Code/Commons/: BuildDbgClang.bat  BuildMain.bat  Clean.bat  Commons.bff
Code/Commons/Include/Poseidix/Common/: Int.h
Code/Commons/Source/: main.cxx
Code/GameEngine/Editor/: BuildMain.bat  Editor.cxx  fbuild.bff
Code/GameEngine/Editor/Source/: Editor.cxx
Code/GameEngine/Editor/src/: editor.cxx
Source/Runtime/Actor/Include/Actor/: Actor.hxx  Transform.hxx
Source/Runtime/Actor/Private/: Transform.cxx
Source/Runtime/Common/Include/Common/: Id.hxx  Types.hxx
Source/Runtime/Common/Private/: Common.cxx
Source/Runtime/Math/Include/Math/: Quat.hxx  Transform.hxx  Vector4.hxx
